Terraform/vpc.tf
resource "aws_vpc" "three_tier_vpc" {
  cidr_block           = "192.168.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "3-tier VPC"
  }
}
